# fastapi-taskflow

./: .gitignore  404.html  LICENCE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
api/backends/: index.html
api/managed-background-tasks/: index.html
api/models/: index.html
api/scheduled-tasks/: index.html
api/task-admin/: index.html
api/task-file-logger/: index.html
api/task-log/: index.html
api/task-manager/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  examples.md  index.md
docs/api/: backends.md  managed-background-tasks.md  models.md  scheduled-tasks.md  task-admin.md  task-file-logger.md  task-log.md  task-manager.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: adding-tasks.md  authentication.md  backends.md  concurrency.md  dashboard.md  defining-tasks.md  eager-dispatch.md  encryption.md  file-logging.md  injection.md  logging.md  multi-instance.md  observability.md  persistence.md  priority-queues.md  process-tasks.md  requeue.md  scheduled-tasks.md  task-admin.md  task-context.md  task-manager.md
docs/stylesheets/: extra.css
examples/: basic_app.py  encryption_app.py  index.html  observability_app.py  priority_app.py  resilience_app.py  scheduled_app.py  task_logging_app.py
fastapi_taskflow/: __init__.py  admin.py  auth.py  dashboard.py  executor.py  file_logger.py  manager.py  models.py  periodic.py  registry.py  router.py  snapshot.py  store.py  task_logging.py  wrapper.py
fastapi_taskflow/backends/: __init__.py  base.py  mysql.py  postgres.py  redis.py  sqlite.py
fastapi_taskflow/dashboard/: __init__.py  css.py  helpers.py  html.py  js.py  router.py  sse.py  template.py
fastapi_taskflow/executors/: __init__.py  async_executor.py  base.py  process_executor.py  thread_executor.py
fastapi_taskflow/loggers/: __init__.py  base.py  chain.py  file.py  memory.py  stdout.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/adding-tasks/: index.html
guide/authentication/: index.html
guide/backends/: index.html
guide/concurrency/: index.html
guide/dashboard/: index.html
guide/defining-tasks/: index.html
guide/eager-dispatch/: index.html
guide/encryption/: index.html
guide/file-logging/: index.html
guide/injection/: index.html
guide/logging/: index.html
guide/multi-instance/: index.html
guide/observability/: index.html
guide/persistence/: index.html
guide/priority-queues/: index.html
guide/process-tasks/: index.html
guide/requeue/: index.html
guide/scheduled-tasks/: index.html
guide/task-admin/: index.html
guide/task-context/: index.html
guide/task-manager/: index.html
overrides/: main.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_dashboard.py  test_dependency.py  test_executor.py  test_executors.py  test_file_logger.py  test_manager.py  test_models.py  test_periodic.py  test_priority.py  test_router.py  test_snapshot.py  test_store.py  test_wrapper.py
