[project]
name = "fastapi-taskflow"
version = "0.4.1"
description = "Turn FastAPI BackgroundTasks into a production-ready task system. Retries, control, resiliency and visibility without workers or brokers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["fastapi", "background-tasks", "task-manager", "retries", "observability", "tasks management", "task-schedular"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.100.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
redis = [
    "redis[asyncio]>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.24",
    "uvicorn>=0.22",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "mkdocs-material>=9.5",
    "mypy>=1.20.0",
    "pymdown-extensions>=10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]

[project.urls]
Homepage = "https://github.com/Attakay78/fastapi-taskflow"
Repository = "https://github.com/Attakay78/fastapi-taskflow"
Issues = "https://github.com/Attakay78/fastapi-taskflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_taskflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
