[project]
name = "fastapi-taskflow"
version = "0.8.1"
description = "Retries, persistence, and visibility for FastAPI's BackgroundTasks. Production-grade background tasks. No workers, no brokers, drop-in."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["fastapi", "background-tasks", "task-manager", "retries", "observability", "tasks management", "task-schedular"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.100.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
redis = [
    "redis[asyncio]>=5.0",
]
postgres = [
    "psycopg2-binary>=2.9",
]
mysql = [
    "PyMySQL>=1.1",
]
scheduler = [
    "croniter>=1.4",
]
encryption = [
    "cryptography>=41.0",
]
process = [
    "cloudpickle>=3.0",
]
all = [
    "redis[asyncio]>=5.0",
    "psycopg2-binary>=2.9",
    "PyMySQL>=1.1",
    "croniter>=1.4",
    "cryptography>=41.0",
    "cloudpickle>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.24",
    "uvicorn>=0.30",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[tool.uv]
dev-dependencies = [
    "cloudpickle>=3.0",
    "croniter>=1.4",
    "cryptography>=41.0",
    "httpx>=0.28.1",
    "mkdocs-material>=9.5",
    "mypy>=1.20.0",
    "pymdown-extensions>=10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]

[project.urls]
Homepage = "https://github.com/Attakay78/fastapi-taskflow"
Repository = "https://github.com/Attakay78/fastapi-taskflow"
Issues = "https://github.com/Attakay78/fastapi-taskflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_taskflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
